# snark-setup

./: Cargo.toml  diff.txt  e2e.sh
.circleci/: config.yml
.github/workflows/: cli.yml  core.yml  wasm.yml
bls-snark-setup/: Cargo.toml
bls-snark-setup/src/: main.rs
bls-snark-setup/src/cli/: contribute.rs  mod.rs  new.rs
phase1/: Cargo.toml
phase1-cli/: Cargo.toml
phase1-cli/scripts/: phase1_chunked.sh  phase1_chunked_minimal.sh  phase1_full.sh  phase2_prepare.sh
phase1-cli/scripts/memory_outs/: memory_18.out  memory_19.out  memory_21.out  memory_22.out
phase1-cli/src/: combine.rs  contribute.rs  lib.rs  transform_pok_and_correctness.rs  transform_ratios.rs
phase1-wasm/: Cargo.toml
phase1-wasm/src/: phase1.rs
phase1/src/: aggregation.rs  verification.rs
phase1/src/helpers/: accumulator.rs
phase1/tests/: marlin.rs
phase2/: Cargo.toml
phase2-cli/: diff.txt
phase2-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  verify.rs
phase2/src/: chunked_groth16.rs  keypair.rs  lib.rs  parameters.rs  polynomial.rs
phase2/tests/: mpc.rs
powersoftau/: Cargo.toml  test.sh
powersoftau/benches/: accumulator.rs
powersoftau/src/: batched_accumulator.rs  keypair.rs  lib.rs  parameters.rs  utils.rs
powersoftau/src/cli_common/: contribute.rs  mod.rs  new_challenge.rs  new_constrained.rs  transform.rs
powersoftau/src/raw/: raw_accumulator.rs
setup-utils/: Cargo.toml
setup-utils/benches/: math.rs
setup-utils/src/: groth16_utils.rs  helpers.rs
setup-utils/src/io/: read.rs
snark-utils/: Cargo.toml
snark-utils/benches/: io.rs
snark-utils/src/: errors.rs  groth16_utils.rs  helpers.rs
snark-utils/src/io/: mod.rs
test-helpers/: Cargo.toml
test-helpers/src/: accumulator_helpers.rs  lib.rs
